# webhook-matrix-notifier

./: .gitignore  Dockerfile  LICENSE  Pipfile  README.md  common.py  config.yml.example  notify.py  pyproject.toml  requirements.txt  testrequest_prometheus.json  wmn.py
wmn/: __init__.py  common.py  notify.py  wmn.py
